--- a/coplime_client_web/web/users/verDetallesPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/verDetallesPuntoLimpio.xhtml
@@ -63,7 +63,7 @@
                                  <h:outputText value="#{contenedor.capacidad}"/>
                              </p:column>
                              <p:column headerText="Llenado" >
-                                 <h:outputText value="#{contenedor.llenadoContenedor}"/>
+                                 <h:outputText value="#{contenedor.llenadoContenedor}%"/>
                              </p:column>
                              <p:column headerText="Estado" >
                                  <h:outputText value="#{contenedor.nombreEstadoContenedor}"/>
