Empezando editar punto limpio
No funcional aún

--- a/coplime_client_web/web/users/admin/agregarContenedor.xhtml
+++ b/coplime_client_web/web/users/admin/agregarContenedor.xhtml
@@ -53,8 +53,8 @@
                                 var="estadoCont" itemLabel="#{estadoCont.label}" itemValue="#{estadoCont.id}" />
                         </p:selectOneMenu>
                         
-                        <p:outputLabel value="Contenedores agregados: #{mantenedorPuntoLimpioConversation.contenedores_creando.size()}"/>
-                        <p:dataTable value="#{mantenedorPuntoLimpioConversation.contenedores_creando}" var="contenedor" 
+                        <p:outputLabel value="Contenedores agregados: #{mantenedorPuntoLimpioAgregarContMB.listaContenedores.size()}"/>
+                        <p:dataTable value="#{mantenedorPuntoLimpioAgregarContMB.listaContenedores}" var="contenedor" 
                                      emptyMessage="No ha agregado contenedores a este punto limpio">
 
                             <p:column headerText="Material" >
