--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -28,6 +28,7 @@
                     <f:facet name="header">Menu para Administrador
                         <h:outputLabel value="#{autenticadorMB.username}"/>
                     </f:facet>
+                    <h:outputLink value="#{request.contextPath}/faces/users/admin/fijarTemporizador.xhtml">Configuración sistema</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/admin/verAdministradores.xhtml">Ver administradores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
