Comenzando generación de reportes

--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -26,7 +26,7 @@
             <h:form>
                 <p:panelGrid columns="1"> 
                     <f:facet name="header">Menu para Administrador
-                        <h:outputLabel value="#{autenticadorMB.username}"/>
+                        <h:outputLabel value="#{request.getRemoteUser()}"/>
                     </f:facet>
                     <h:outputLink value="#{request.contextPath}/faces/users/admin/fijarTemporizador.xhtml">Configuración sistema</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
@@ -41,7 +41,7 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verMantenciones.xhtml">Ver mantenciones de puntos limpios</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
-                    <h:outputLink >Generar reportes</h:outputLink>
+                    <h:outputLink value="#{request.contextPath}/faces/users/admin/generarReporte.xhtml">Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
@@ -52,7 +52,7 @@
             <h:form>
                 <p:panelGrid columns="1"> 
                     <f:facet name="header">Menu para Inspector
-                        <h:outputLabel value="#{autenticadorMB.username}"/>
+                        <h:outputLabel value="#{request.getRemoteUser()}"/>
                     </f:facet>
                     <h:outputLink value="#{request.contextPath}/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
@@ -66,7 +66,6 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/inspector/agregarRevisionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml">Solicitar una mantención de punto limpio</h:outputLink>
-                    <h:outputLink >Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
@@ -77,7 +76,7 @@
             <h:form>
                 <p:panelGrid columns="1"> 
                     <f:facet name="header">Menu para Operario
-                        <h:outputLabel value="#{autenticadorMB.username}"/>
+                        <h:outputLabel value="#{request.getRemoteUser()}"/>
                     </f:facet>
                     <h:outputLink value="#{request.contextPath}/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
@@ -93,7 +92,6 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/operario/agregarMantencionPuntoLimpio.xhtml">Agregar mantención de punto limpio</h:outputLink>
-                    <h:outputLink >Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
                 </p:panelGrid>
