arreglos de mensajes feedback que no se mostraban

--- a/coplime_client_web/web/users/inspector/agregarRevisionPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/inspector/agregarRevisionPuntoLimpio.xhtml
@@ -33,7 +33,7 @@
                         
                         <f:facet name="footer">
                             <p:commandButton value="Guardar revisión" action="#{agregarRevisionMB.guardarRevision()}"/>
-                            <p:commandButton value="Volver" action="#{agregarRevisionMB.volverToLista()}"/>
+                            <p:commandButton value="Ver Listado" action="#{agregarRevisionMB.volverToLista()}"/>
                         </f:facet>
                     </p:panelGrid>
 
