--- a/coplime_client_web/web/users/inspector/solicitarMantencionPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/inspector/solicitarMantencionPuntoLimpio.xhtml
@@ -37,7 +37,7 @@
                         
                         <f:facet name="footer">
                             <p:commandButton value="Realizar solicitud" action="#{agregarSolicitudMB.guardarSolicitud()}"/>
-                            <p:commandButton value="Volver" action="#{agregarSolicitudMB.volverToLista()}"/>
+                            <p:commandButton value="Ver listado" action="#{agregarSolicitudMB.volverToLista()}"/>
                         </f:facet>
                     </p:panelGrid>
 
