arreglado problema botones atrás en enviar aviso

--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -17,8 +17,8 @@
             </ui:define>
             
             <ui:define name="botonesBarra">
-                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{autenticadorMB.goToIndex()}" />
-                <ezcomp:boton_barra_superior classIcon="ui-icon-back" title="Seleccionar punto limpio" action="#{autenticadorMB.goToEnviarAvisoIncidencia()}" />
+                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{login.goToIndex()}" />
+                <ezcomp:boton_barra_superior classIcon="ui-icon-back" title="Seleccionar punto limpio" action="#{login.goToEnviarAvisoIncidencia()}" />
             </ui:define>
             
             <ui:define name="centro">
