--- a/coplime_client_web/web/users/admin/fijarTemporizador.xhtml
+++ b/coplime_client_web/web/users/admin/fijarTemporizador.xhtml
@@ -21,7 +21,7 @@
                         <f:facet name="header">¿Cada cuánto estimar llenado?</f:facet>
                         
                         <p:outputLabel value="Intervalo (hrs)"/>
-                        <p:inputText value="#{mantenedorTemporizadorEstimacionProgramarMB.numHorasIntervalo}" type="numeric">
+                        <p:inputText value="#{mantenedorTemporizadorEstimacionProgramarMB.numHorasIntervalo}" type="numeric" title="Escriba aquí cada cuántas horas el sistema debe estimar el llenado de los contenedores.">
                             <f:validator validatorId="NumPositiveValidator"/>
                             
                         </p:inputText>
