--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -134,8 +134,8 @@
                         </div>
                         <div class="span2 text-right">
                             <h:graphicImage alt="Logo COPLIME" 
-                                            width="40px" height="40px"
-                                            url="/resources/img/icon.png"/>
+                                            width="200px" height="115px"
+                                            url="/resources/img/icon2.jpg"/>
                         </div>
                     </div>
                 </div>
