--- a/coplime_client_web/web/users/verPuntosLimpios.xhtml
+++ b/coplime_client_web/web/users/verPuntosLimpios.xhtml
@@ -27,7 +27,7 @@
                             <p:column headerText="Nombre" sortBy="#{puntoLimpio.nombre}" filterMatchMode="contains" filterBy="#{puntoLimpio.nombre}">
                                 <h:outputText value="#{puntoLimpio.nombre}"/>
                             </p:column>
-                            <p:column headerText="estado" sortBy="#{puntoLimpio.estado}" filterMatchMode="contains" filterBy="#{puntoLimpio.estado}">
+                            <p:column headerText="Estado" sortBy="#{puntoLimpio.estado}" filterMatchMode="contains" filterBy="#{puntoLimpio.estado}">
                                 <h:outputText value="#{puntoLimpio.estado}"/>
                             </p:column>
                             <p:column headerText="Fecha proxima rev" sortBy="#{puntoLimpio.fechaProximaRevStr}" filterMatchMode="contains" filterBy="#{puntoLimpio.fechaProximaRevStr}">
