--- a/coplime_client_web/web/users/admin/config/agregarEstado.xhtml
+++ b/coplime_client_web/web/users/admin/config/agregarEstado.xhtml
@@ -10,19 +10,19 @@
     
     <body>
          <ui:composition template="/mainTemplate.xhtml">
-           <ui:define name="titulo" >Configuración del sistema - Agregar material</ui:define>
+           <ui:define name="titulo" >Configuración del sistema - Agregar estado</ui:define>
            <ui:define name="botonesBarra">
                 <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{autenticadorMB.indexLoggued()}" />
             </ui:define> 
            <ui:define name="centro">
-               <h:form title="Agregar nuevo material">
+               <h:form title="Agregar nuevo estado">
                    <p:panelGrid columns="2" styleClass="centrar" >
-                        <f:facet name="header">Ingrese el nuevo material</f:facet>     
-                        <p:outputLabel value="Nombre material:"/>
-                        <p:inputText value="#{mantenedorMaterialAgregarMB.nombreMaterial}"/>
+                        <f:facet name="header">Ingrese el nuevo estado</f:facet>     
+                        <p:outputLabel value="Nombre estado:"/>
+                        <p:inputText value="#{mantenedorEstadoAgregarMB.nombreEstado}"/>
                         <f:facet name="footer">
-                            <p:commandButton value="Guardar" ajax="false" action="#{mantenedorMaterialAgregarMB.agregarMaterial()}"/>
-                            <p:commandButton value="Volver" immediate="true" action="#{mantenedorMaterialAgregarMB.volver()}"/>  
+                            <p:commandButton value="Guardar" ajax="false" action="#{mantenedorEstadoAgregarMB.agregarEstado()}"/>
+                            <p:commandButton value="Volver" immediate="true" action="#{mantenedorEstadoAgregarMB.volver()}"/>  
                         </f:facet>
                    </p:panelGrid>
                </h:form>
