--- a/coplime_client_web/web/users/admin/config/agregarTipoIncidencia.xhtml
+++ b/coplime_client_web/web/users/admin/config/agregarTipoIncidencia.xhtml
@@ -10,19 +10,21 @@
     
     <body>
          <ui:composition template="/mainTemplate.xhtml">
-           <ui:define name="titulo" >Configuración del sistema - Agregar material</ui:define>
+           <ui:define name="titulo" >Configuración del sistema - Agregar Tipo de Incidencia</ui:define>
            <ui:define name="botonesBarra">
                 <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{autenticadorMB.indexLoggued()}" />
             </ui:define> 
            <ui:define name="centro">
-               <h:form title="Agregar nuevo material">
+               <h:form title="Agregar nuevo tipo de incidencia">
                    <p:panelGrid columns="2" styleClass="centrar" >
-                        <f:facet name="header">Ingrese el nuevo material</f:facet>     
-                        <p:outputLabel value="Nombre material:"/>
-                        <p:inputText value="#{mantenedorMaterialAgregarMB.nombreMaterial}"/>
+                        <f:facet name="header">Ingrese el nuevo tipo de incidencia</f:facet>     
+                        <p:outputLabel value="Nombre incidencia:"/>
+                        <p:inputText value="#{mantenedorTipoIncidenciaAgregarMB.nombreTipoInc}"/>
+                        <p:outputLabel value="¿Visible para usuarios?"/>
+                        <p:selectBooleanCheckbox value="#{mantenedorTipoIncidenciaAgregarMB.esVisibleUsuario}"/>
                         <f:facet name="footer">
-                            <p:commandButton value="Guardar" ajax="false" action="#{mantenedorMaterialAgregarMB.agregarMaterial()}"/>
-                            <p:commandButton value="Volver" immediate="true" action="#{mantenedorMaterialAgregarMB.volver()}"/>  
+                            <p:commandButton value="Guardar" ajax="false" action="#{mantenedorTipoIncidenciaAgregarMB.agregarTipoInc()}"/>
+                            <p:commandButton value="Volver" immediate="true" action="#{mantenedorTipoIncidenciaAgregarMB.volver()}"/>  
                         </f:facet>
                    </p:panelGrid>
                </h:form>
