--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -68,7 +68,7 @@
                             <p:commandButton value="Enviar" ajax="false" action="#{enviarAvisoIncidenciaMB.enviarAviso()}">
                                 <f:param name="id" value="#{enviarAvisoIncidenciaMB.numPuntoLimpio}"/>
                             </p:commandButton>
-                            <p:commandButton immediate="true" value="Cancelar" action="#{autenticadorMB.goToIndex()}"/>
+                            <p:commandButton immediate="true" value="Cancelar" action="#{login.goToIndex()}"/>
                         </f:facet>
                     </p:panelGrid>
                     
