--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -43,7 +43,7 @@
                             <p:outputLabel value="Nombre de usuario" for="input_username"/>
                             <p:inputText id="input_username" label="Nombre de usuario" value="#{login.username}" required="true"/>
 
-                            <p:outputLabel value="contraseña" for="input_password"/>
+                            <p:outputLabel value="Contraseña" for="input_password"/>
                             <p:inputText id="input_password" type="password" value="#{login.password}" required="true"/>
                             
                             <f:facet name="footer">
