--- a/coplime_client_web/web/users/admin/editarAdministrador.xhtml
+++ b/coplime_client_web/web/users/admin/editarAdministrador.xhtml
@@ -53,7 +53,7 @@
                          
                          <f:facet name="footer">
                             <p:commandButton value="Guardar" ajax="false" action="#{mantenedorAdministradorEditarMB.guardarCambiosAdministrador()}"/>
-                            <p:commandButton value="Volver" action="#{mantenedorAdministradorEditarMB.volverToLista()}"/>                            
+                            <p:commandButton value="Volver" immediate="true" action="#{mantenedorAdministradorEditarMB.volverToLista()}"/>                            
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
