arreglos de varios issues que hay en github

--- a/coplime_client_web/web/users/admin/agregarContenedor.xhtml
+++ b/coplime_client_web/web/users/admin/agregarContenedor.xhtml
@@ -60,6 +60,11 @@
                             <p:column headerText="Material" >
                                 <h:outputText value="#{contenedor.nombreMaterial}"/>
                             </p:column>
+                            
+                            <p:column headerText="Capacidad" >
+                                <h:outputText value="#{contenedor.capacidad} #{contenedor.nombreUnidadMedida}"/>
+                            </p:column>
+                            
                             <p:column headerText="">
                                 <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" onclick="cd_#{contenedor.id}.show();" />
 
