--- a/coplime_client_web/web/users/admin/editarPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/admin/editarPuntoLimpio.xhtml
@@ -56,7 +56,7 @@
                                      emptyMessage="No ha agregado contenedores a este punto limpio">
 
                             <p:column headerText="Material" >
-                                <h:outputText value="#{contenedor.nombreMaterial}"/>
+                                <h:outputText value="#{contenedor.nombreMaterial} #{contenedor.nombreUnidadMedida}"/>
                             </p:column>
                             
                             <p:column headerText="">
