--- a/coplime_client_web/web/users/verDetallesPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/verDetallesPuntoLimpio.xhtml
@@ -60,7 +60,7 @@
                                  <h:outputText value="#{contenedor.nombreMaterial}"/>
                              </p:column>
                              <p:column headerText="Capacidad" >
-                                 <h:outputText value="#{contenedor.capacidad}"/>
+                                 <h:outputText value="#{contenedor.capacidad} #{contenedor.nombreUnidadMedida}"/>
                              </p:column>
                              <p:column headerText="Llenado" >
                                  <h:outputText value="#{contenedor.llenadoContenedor}%"/>
