Editar punto limpio listo

--- a/coplime_client_web/web/users/admin/editarPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/admin/editarPuntoLimpio.xhtml
@@ -60,7 +60,7 @@
                             </p:column>
                             
                             <p:column headerText="">
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-pencil ui-icon" onclick="cd_#{contenedor.id}.show();" />
+                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-pencil ui-icon" action="#{mantenedorPuntoLimpioEditarMB.editarContenedor(contenedor.id)}" />
                             </p:column>
                             
                             <p:column headerText="">
